--- a/templates/posts/show.html.twig
+++ b/templates/posts/show.html.twig
@@ -8,15 +8,16 @@
     <h4>{{ post.title }}</h4>
     <p>{{ post.body }}</p><hr>
     <span>{{ post.getCreatedAt() | date("m/d/Y") }}</span><br><hr>
-    {% if form is defined %}
     <div class="container">
         {{ form_start(form) }}
-        {{ form_row(form.comment) }}
+        {{ form_row(form.comment, {'label': ' '}) }}
         <button type="submit" class="btn btn-primary">Отправить</button>
         {{ form_end(form) }}
     </div>
-    {% endif %}
+    <h1>Коментарии</h1>
     {%  for comment in post.comments %}
+        <p class="text-small">{{ comment.user.username }}</p>
+        <p class="text-small">{{ comment.createdAt | date('d.m.Y H:i') }}</p>
         <p>{{ comment.comment }}</p><hr>
     {% endfor %}
 </div>
