--- a/templates/posts/show.html.twig
+++ b/templates/posts/show.html.twig
@@ -8,21 +8,12 @@
     <h4>{{ post.title }}</h4>
     <p>{{ post.body }}</p><hr>
     <span>{{ post.getCreatedAt() | date("m/d/Y") }}</span><br><hr>
-    <div class="container">
-    {% if form is defined %}
-            {{ form_start(form) }}
-            {{ form_row(form.comment, {'label': ' '}) }}
-            <button type="submit" class="btn btn-primary">Отправить</button>
-            {{ form_end(form) }}
-    {% else %}
-        <h3>Войдите что би остовлять кометарии</h3>
-    {% endif %}
-    </div>
     <h1>Коментарии</h1>
     {%  for comment in post.comments %}
         <p class="text-small">{{ comment.user.username }}</p>
         <p class="text-small">{{ comment.createdAt | date('d.m.Y H:i') }}</p>
-        <p>{{ comment.comment }}</p><hr>
+        <p>{{ comment.comment }}</p>
+        <hr>
     {% endfor %}
 </div>
 {% endblock %}
